# binary_blogs

./: .gitignore  readme.md  start_app.sh
backend/: .env  Dockerfile  db.sqlite3  env.example  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/authentication/: api_view.py  auth_classes.py  authentication_backend.py  urls.py
backend/backend/: db.sqlite3  settings.py  urls.py
backend/backend/authentication/: urls.py  views.py
backend/backend/backend/: settings.py  urls.py
backend/backend/blog/: __init__.py  models.py
backend/backend/blog/migrations/: 0001_initial.py
backend/backend/frontend/: urls.py  views.py
backend/backend/static/ang/: main.js
backend/backend/user/: api_views.py  models.py  urls.py
backend/backend/user/migrations/: 0001_initial.py
backend/blog/: api_views.py  models.py  pagination_class.py  urls.py
backend/blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blog_publisher.py  0004_alter_blog_description_alter_blog_tags_and_more.py
backend/user/: api_views.py  models.py  urls.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_password.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/blog_frontend/: README.md  angular.json  package-lock.json  package.json
frontend/blog_frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/: styles.less
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.less  app.module.ts
frontend/src/app/blog-view/: blog-view.component.html  (+3 more)
(+22 files in other folders)
