[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alquama00s <alquama00s@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
djangorestframework = "^3.14.0"
Authlib = "^1.2.0"
python-dotenv = "^1.0.0"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
